--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Ultra/vendor/spdlog"]
 	path = Ultra/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Ultra/vendor/GLFW"]
+	path = Ultra/vendor/GLFW
+	url = https://github.com/TheCherno/glfw.git
