Created an object of the window platform

--- a/Ultra/Ultra.vcxproj.filters
+++ b/Ultra/Ultra.vcxproj.filters
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Ultra">
       <UniqueIdentifier>{6D583E0E-D96C-66BF-A2EE-091F0EC262F0}</UniqueIdentifier>
     </Filter>
@@ -9,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\Ultra.h" />
     <ClInclude Include="src\Ultra\Application.h">
       <Filter>Ultra</Filter>
@@ -34,9 +43,15 @@
     <ClInclude Include="src\Ultra\Log.h">
       <Filter>Ultra</Filter>
     </ClInclude>
+    <ClInclude Include="src\Ultra\Window.h">
+      <Filter>Ultra</Filter>
+    </ClInclude>
     <ClInclude Include="src\ultpch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\Ultra\Application.cpp">
       <Filter>Ultra</Filter>
     </ClCompile>
