--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Ultra/vendor/GLFW"]
 	path = Ultra/vendor/GLFW
 	url = https://github.com/TheCherno/glfw.git
+[submodule "Ultra/vendor/ImGui"]
+	path = Ultra/vendor/ImGui
+	url = https://github.com/TheCherno/imgui.git
